--- a/test.html
+++ b/test.html
@@ -5,10 +5,10 @@
 </head>
 
 <body>
-    <p>
-        sjjjdjjdjdjjdjjdjdjdjjdjdj
-        dkdkjdjdjjdjdjj
-    </p>
+    <form method="POST" action="index.php">
+        <input type="text" name="name">
+        <input type="submit">
+    </form>
 </body>
 
 </html>
